# TTMediaBot

./: pyproject.toml  requirements.txt
bot/: __init__.py  utils.py
bot/commands/: __init__.py  admin_commands.py  command.py  user_commands.py
bot/config/: models.py
bot/connectors/: __init__.py  tt_player_connector.py
