[project]
name = "ttmediabot"
version = "0.1.0"
description = "Media bot for Team Talk"
authors = [
    {name = "Blake Oliver",email = "oliver22213@me.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "babel (>=2.17.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "patool (>=3.1.3,<4.0.0)",
    "portalocker (>=3.1.1,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pyshorteners (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "vk-api (>=11.9.9,<12.0.0)",
    "yandex-music (>=2.2.0,<3.0.0)",
    "youtube-search-python (>=1.6.6,<2.0.0)",
    "yt-dlp (>=2025.2.19,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
flake8-black = "^0.3.6"
flake8-bandit = "^4.1.1"
flake8-commas = "^4.0.0"
flake8-eradicate = "^1.5.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"

